# loopchan

./: .dockerignore  .gitignore  Cargo.toml  Config.toml  Dockerfile  README.md  build.rs  docker-compose.yml  users.db
src/: main.rs
src/commands/: adm.rs  debug.rs  eco.rs  fishing.rs  hello.rs  lastfm.rs  mod.rs  ping.rs  qa.rs  rbx.rs
src/handlers/events/: blacklist.rs  fishing_minigame.rs  inventory_paginator.rs  message.rs  mod.rs  roleshop.rs  verification.rs  welcomecard.rs
src/utils/: basic.rs  checks.rs  db.rs  mod.rs  wordgen.rs
src/utils/database/: economy.rs  fishing.rs  lastfm.rs  linking.rs  mod.rs
