[package]
name = "loopchan"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
ab_glyph = "0.2.29"
async-sqlite = "0.5.1"
chrono = "0.4.40"
dotenv = "0.15.0"
image = "0.25.6"
imageproc = "0.25.0"
lastfm-rust = { git = "https://github.com/FrostX-Official/lastfm-rust-logless.git", rev = "cc6a4f4ee9f794480e986e0ed1efe3aad81b75af" }
log = "0.4.27"
once_cell = "1.21.3"
poise = "0.6.1"
rand = "0.9.1"
roboat = "0.35.0"
serde = "1.0.219"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
