[package]
name = "loopchan"
version = "0.1.0-next"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next"}
serenity = {  git = "https://github.com/serenity-rs/serenity.git", branch = "next"}
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.40"